update Docs. Added first set of vulnerabilities and instructions.

--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -28,6 +28,13 @@ http {
         listen 80;
         server_name api.taintedport.com;
 
+        # VULN: Directory listing enabled on /files/
+        location /files/ {
+            alias /var/www/backend/;
+            autoindex on;
+            autoindex_format html;
+        }
+
         location / {
             fastcgi_pass unix:/var/run/php-fpm.sock;
             fastcgi_index index.php;
@@ -48,12 +55,22 @@ http {
     }
 
     # =========================================================
+    # VULN: Directory listing on /files/ path
+    # =========================================================
+    # =========================================================
     # Production: taintedport.com -> Next.js frontend
     # Also: default server for local Docker (localhost:8080)
     # =========================================================
     server {
         listen 80 default_server;
         server_name taintedport.com _;
+
+        # VULN: Directory listing enabled on /files/
+        location /files/ {
+            alias /var/www/backend/;
+            autoindex on;
+            autoindex_format html;
+        }
 
         # --- /api/* path-based routing (for local Docker) ---
         location /api/ {
